# goat

./: README.md
.changeset/: solana-smart-wallet.md
python/: generate_eval_scripts.py  pyproject.toml  run_all_evals.py
python/examples/by-framework/langchain/: README.md
python/examples/by-framework/openai-agents-sdk/: README.md
python/examples/by-use-case/evm-purchase-on-amazon/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/evm-send-and-receive-tokens/: README.md
python/examples/by-use-case/evm-swap-tokens/: README.md
python/examples/by-use-case/solana-purchase-on-amazon/: .env.template  README.md  example.py  pyproject.toml
python/examples/by-use-case/solana-send-and-receive-tokens/: README.md
python/examples/by-use-case/solana-swap-tokens/: README.md
python/examples/evals/simple-plugin-eval/: README.md  example.py  pyproject.toml
python/examples/langchain/crossmint/: .env.template  README.md  example.py  pyproject.toml  smart_evm_wallet_example.py  solana_smart_wallet_example.py
python/examples/langchain/crossmint/examples/: advanced_operations.py  delegated_signer.py
python/examples/langchain/lulo/: example.py
python/examples/langchain/solana/: example.py  pyproject.toml
python/examples/langchain/web3/: README.md  example.py  pyproject.toml
python/goat_sdk/adapters/langchain/: __init__.py  tools.py
python/goat_sdk/core/: __init__.py  core.py
python/goat_sdk/core/evm/: __init__.py  methods.py  parameters.py  tools.py
python/goat_sdk/core/plugins/: __init__.py  plugins.py
python/goat_sdk/core/tools/: __init__.py  tools.py
python/goat_sdk/core/wallets/: __init__.py  core.py  evm.py  solana.py
python/goat_sdk/wallets/web3/: __init__.py  client.py
python/src/adapters/langchain/: test_eval.py
python/src/adapters/openai_agents_sdk/goat_adapters/eval/: __init__.py
python/src/goat-sdk/goat/: __init__.py
python/src/goat/evals/: __init__.py
python/src/goat/evals/utils/: __init__.py  run_evals.py
python/src/plugins/1inch/goat_plugins/eval/: __init__.py
python/src/plugins/allora/goat_plugins/eval/: __init__.py
python/src/plugins/birdeye/: pyproject.toml
python/src/plugins/birdeye/goat_plugins/birdeye/: __init__.py  parameters.py  service.py
python/src/plugins/coingecko/: test_eval.py
python/src/plugins/coingecko/goat_plugins/eval/: __init__.py
python/src/plugins/coinmarketcap/: README.md  pyproject.toml
python/src/plugins/coinmarketcap/goat_plugins/coinmarketcap/: __init__.py  parameters.py  service.py
python/src/plugins/crossmint-headless-checkout/: README.md  pyproject.toml
python/src/plugins/crossmint-headless-checkout/goat_plugins/crossmint_headless_checkout/: __init__.py  parameters.py  service.py
python/src/plugins/debridge/goat_plugins/eval/: __init__.py
python/src/plugins/dexscreener/goat_plugins/eval/: __init__.py
python/src/plugins/erc20/: run_eval_test.py  test_eval.py
python/src/plugins/erc20/goat_plugins/eval/: __init__.py
python/src/plugins/erc721/goat_plugins/: __init__.py
python/src/plugins/erc721/goat_plugins/erc721/: __init__.py  abi.py  parameters.py  service.py  token.py
python/src/plugins/farcaster/goat_plugins/eval/: __init__.py
python/src/plugins/jsonrpc/goat_plugins/eval/: __init__.py
python/src/plugins/jupiter/goat_plugins/eval/: __init__.py
python/src/plugins/lulo/goat_plugins/eval/: __init__.py
python/src/plugins/lulo/goat_plugins/lulo/: service.py
python/src/plugins/nansen/goat_plugins/eval/: __init__.py
python/src/plugins/opensea/goat_plugins/eval/: __init__.py
python/src/plugins/rugcheck/goat_plugins/eval/: __init__.py
python/src/plugins/spl_token/goat_plugins/eval/: __init__.py
python/src/plugins/superfluid/goat_plugins/eval/: __init__.py
python/src/plugins/uniswap/goat_plugins/eval/: __init__.py
python/src/wallets/crossmint/: __init__.py  pyproject.toml
python/src/wallets/crossmint/crossmint/: __init__.py
python/src/wallets/crossmint/goat_plugins/crossmint/: __init__.py  base.py  faucet.py  faucet_plugin.py  mint.py  mint_plugin.py  parameters.py  service.py  wallet.py  wallet_plugin.py
python/src/wallets/crossmint/goat_wallets/crossmint/: __init__.py  api_client.py  base_wallet.py  custodial_solana_wallet.py  custodial_wallet.py  evm_smart_wallet.py  faucet_plugin.py  mint.py  mint_plugin.py  parameters.py  service.py  smart_wallet.py  solana_smart_wallet.py  solana_smart_wallet_factory.py  wallet.py  wallet_plugin.py
python/src/wallets/crossmint/tests/: test_api_client.py  test_api_client_more.py  test_custodial_wallet.py  test_smart_wallet.py  test_solana_smart_wallet.py
python/src/wallets/evm/: test_eval.py
python/src/wallets/evm/goat_wallets/eval/: __init__.py
python/src/wallets/solana/goat_wallets/solana/: wallet.py
typescript/: generate-eval-scripts.ts  package.json  pnpm-lock.yaml  run-all-evals.ts
typescript/.changeset/: poor-buses-double.md
typescript/examples/eliza/: README.md  index.ts
(+42 files in other folders)
