[tool.poetry]
name = "simple-plugin-eval"
version = "0.1.0"
description = "Simple Plugin Evaluation Example"
authors = ["GOAT SDK <support@ohmygoat.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
goat-sdk = {path = "../../../src/goat-sdk", develop = true}
goat-sdk-wallet-web3 = {path = "../../../src/wallets/web3", develop = true}
goat-sdk-plugin-erc20 = {path = "../../../src/plugins/erc20", develop = true}
langchain-openai = "^0.0.5"
web3 = "^6.11.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
