[tool.poetry]
name = "goat-examples-langchain-web3"
version = "0.1.0"
description = ""
authors = ["Agustin Armellini Fischer <armellini13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain-openai = "^0.2.11"
langchain = "^0.3.10"
goat_sdk = {path = "../../../"}
pydantic = "^2.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
